[package]
name = "quantelconnect"
version = "0.1.1"
authors = ["Lymkwi <lymkwi@vulpinecitrus.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest={version="0.11.10", features=["cookies","blocking"]}
clap="3.1.8"
kuchiki="0.8.1"
tini="1.3.0"
