[package]
name = "quantelconnect"
version = "0.1.1"
authors = ["Lymkwi <lymkwi@vulpinecitrus.info>"]
edition = "2018"
description = "A Rust command line utility tool to connect to the QuanticTelecom captive portal."
license = "CC0"
repository = "https://github.com/Lymkwi/quantelconnect"
keywords = [ "cli", "web", "utility" ]
categories = [ "command-line-utilities" ] 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest={version="0.11.10", features=["cookies","blocking"]}
clap="3.1.18"
kuchiki="0.8.1"
tini="1.3.0"
